dappnode-testnet/build/envoy/envoy.yaml

static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 443
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: pocket-core
            virtual_hosts:
            - name: pocket-core
              domains:
              - "*"
              routes:
              - match:
                  prefix: /v1/client/relay
                route:
                  cluster: pocket-core
              - match:
                  prefix: /v1/client/dispatch
                route:
                  cluster: pocket-core
              - match:
                  prefix: /v1/client/challenge
                route:
                  cluster: pocket-core
              - match:
                  prefix: /v1
                route:
                  cluster: pocket-core
          http_filters:
          - name: envoy.filters.http.router
            typed_config: {}
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config: 
          "@type": type.googleapis.com/envoy.api.v2.auth.DownstreamTlsContext
          common_tls_context:
            tls_certificates:
            - certificate_chain:
                filename: "/etc/envoy/certificate.crt"
              private_key:
                filename: "/etc/envoy/key.key"
  clusters:
  - name: pocket-core
    type: strict_dns
    connect_timeout: 2s
    lb_policy: round_robin
    hosts:
      socket_address:
        address: pocket-core-testnet.public.dappnode.eth
        port_value: 8082
